3sem/IFJ/IFJ-Project/tests/type/errors/test_error_string_mult_string.wren
import "ifj25" for Ifj

// ERROR: String * String is not allowed
// Only String * Num is valid
// Expected error: SEMANTIC_TYPE_EXPR_ERROR (6)

class Program {
	static main() {
		var wrong
		wrong = "abc" * "def"
	}
}

